[package]
name = "web_crawler"
version = "0.1.0"
authors = ["Marko Petrlic <petrlic.marko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
url = "2.2.1"
surf = "2.1.0"
async-std = { version = "1.9.0", features = [ "attributes" ] }
tide = "0.16.0"
serde = { version = "^1.0.117",  features = [ "derive" ] }
serde_json = "^1.0.59"
http-types = "2.10.0"